@@ -1,3 +1,4 @@
+2162 [OneClick] added up/down buttons for the indexer priority selection
 2161 [OneClick] added option for the default output directory
 2160 [OneClick] added option to disable audio/video tracks completely by default
 2159 [OneClick] use the correct input file if using Blu-ray input with the option "don't encode video"
